<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_selector</name>
  <version>0.0.0</version>
  <description>The trajectory_selector package</description>
  <maintainer email="yunsh3594@gmail.com">seunghoe yun</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <exec_depend>ad_api_adaptors</exec_depend>
  <exec_depend>autoware_iv_external_api_adaptor</exec_depend>
  <exec_depend>autoware_iv_internal_api_adaptor</exec_depend>
  <exec_depend>awapi_awiv_adapter</exec_depend>
  <exec_depend>default_ad_api</exec_depend>
  <exec_depend>path_distance_calculator</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>component_interface_specs</depend>
  <depend>component_interface_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>motion_utils</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>vehicle_info_util</depend>
  <!-- <depend>route_handler</depend> -->
  <depend>avante_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
